force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Use this object to create Project per account to keep track of the amount of time spent on a certain tasks.</description>
    <label>Professional Service</label>
    <nameField>
        <displayFormat>PS - {0000000}</displayFormat>
        <label>PS Item#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>