force-app/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates weather a Project is Active or not</description>
    <inlineHelpText>Is the Project Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>