force-app/main/default/objects/Project__c/fields/Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billable_Rate__c</fullName>
    <defaultValue>250</defaultValue>
    <description>Hourly rate of billing</description>
    <inlineHelpText>Per hour bill rate</inlineHelpText>
    <label>Billable Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>