force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Budget allocated to the Project/Task</description>
    <inlineHelpText>Enter the budget allocated to the Project/Task.</inlineHelpText>
    <label>Budget</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>