force-app/main/default/objects/Project__c/fields/Budget_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Budget_Dollar__c</fullName>
    <formula>PS__c * Billable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto calculated as Allocated PS hours * Billable rate ($250 per Hr)</inlineHelpText>
    <label>Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>