force-app/main/default/objects/Project__c/fields/Budget_in_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Budget_in_Hrs__c</fullName>
    <inlineHelpText>Enter the number of PS hours assigned to this Project</inlineHelpText>
    <label>Budget (in Hrs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>