force-app/main/default/objects/Project__c/fields/Budget_Unused__c.field-meta.xml
<CustomField>
    <fullName>Budget_Unused__c</fullName>
    <description>Remaining budget hours</description>
    <formula>PS__c  -  Hours_billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining hours</inlineHelpText>
    <label>PS Unused (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>