force-app/main/default/objects/Project__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer against whom this Project is being billed.</description>
    <inlineHelpText>Account to which the Project/Task is allocated.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Professional Services</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>