force-app/main/default/objects/Project__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary SPOC of the Account against whom this Project/Task is being billed</description>
    <inlineHelpText>Primary SPOC</inlineHelpText>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>