force-app/main/default/objects/Project__c/fields/Evaluation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_End_Date__c</fullName>
    <formula>Opportunity__r.Evaluation_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation End Date</label>
    <type>Date</type>
</CustomField>