force-app/main/default/objects/Project__c/fields/Hours_billed__c.field-meta.xml
<CustomField>
    <fullName>Hours_billed__c</fullName>
    <description>Total hours excluding &quot;No Charge&quot;</description>
    <inlineHelpText>The number of billable working hours - time entries that are marked &quot;no charge&quot; are excluded</inlineHelpText>
    <label>Hours Billed</label>
    <summarizedField>TimeLog__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>TimeLog__c.No_Charge__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TimeLog__c.Related_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>