force-app/main/default/objects/Project__c/fields/Invoiced_Hours__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Hours__c</fullName>
    <label>Invoiced Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>