force-app/main/default/objects/Project__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Professional Services</relationshipLabel>
    <relationshipName>Professional_Services</relationshipName>
    <type>Lookup</type>
</CustomField>