force-app/main/default/objects/Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Oppty, if any?</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.Account.Id</valueField>
        </filterItems>
        <infoMessage>Please choose the relavent Opportunity</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>