force-app/main/default/objects/Project__c/fields/Opportunity_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_Name__c</fullName>
    <formula>Opportunity__r.Contact_Name__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contact Name</label>
    <type>Text</type>
</CustomField>