force-app/main/default/objects/Project__c/fields/Pre_Sales_Engg__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Engg__c</fullName>
    <formula>Opportunity__r.Pre_SalesEngineer__r.FirstName+&quot; &quot;+Opportunity__r.Pre_SalesEngineer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Sales Engg</label>
    <type>Text</type>
</CustomField>