force-app/main/default/objects/Project__c/fields/PS__c.field-meta.xml
<CustomField>
    <fullName>PS__c</fullName>
    <formula>Opportunity__r.PS_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is pulled from the PS hours field in Opportunity</inlineHelpText>
    <label>Allocated PS Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>