force-app/main/default/objects/Project__c/fields/PS_item__c.field-meta.xml
<CustomField>
    <fullName>PS_item__c</fullName>
    <label>PS Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turn Key Continuous Delivery Set up with AutoRABIT</fullName>
            </value>
            <value>
                <fullName>Standard Professional Services - Annual Packs</fullName>
            </value>
            <value>
                <fullName>Onsite AutoRABIT Customer Success Engineer</fullName>
            </value>
            <value>
                <fullName>Onsite AutoRABIT Customer Success Architect</fullName>
            </value>
            <value>
                <fullName>PreSales Activity</fullName>
            </value>
            <value>
                <fullName>CS Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>