force-app/main/default/objects/Project__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Revenue generated from this project so far (excluding &quot;No Charge&quot;)</description>
    <formula>Hours_billed__c * Billable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue generated till now.</inlineHelpText>
    <label>Revenue Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>