force-app/main/default/objects/Project__c/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <formula>Opportunity__r.Team_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>