force-app/main/default/objects/Project__c/fields/Total_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Spent__c</fullName>
    <description>Total number of hours spent on the Project</description>
    <inlineHelpText>Total hours spent</inlineHelpText>
    <label>Total Hours Spent</label>
    <summarizedField>TimeLog__c.Duration__c</summarizedField>
    <summaryForeignKey>TimeLog__c.Related_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>